# KonomiTV

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Readme.md  config.example.yaml
.cursor/rules/: global.mdc
.github/: copilot-instructions.md
.github/workflows/: build_installer.yaml  build_thirdparty.yaml
client/: package.json  vite.config.mts
client/src/: App.vue  main.ts
client/src/components/: BottomNavigation.vue  HeaderBar.vue  Navigation.vue  OfflineModeMessage.vue  SPHeaderBar.vue
client/src/components/Captures/: CaptureDetailDrawer.vue  CaptureList.vue
client/src/components/Reservations/: ReservationList.vue  ReservationRecordingSettings.vue
client/src/components/Timetable/: ProgramDetailDrawer.vue
client/src/components/Videos/: GlobalTSReplaceEncodingProgress.vue  RecordedProgram.vue  TSReplaceEncodingProgress.vue
client/src/components/Videos/Dialogs/: OfflineSaveDialog.vue  RecordedFileInfoDialog.vue  TSReplaceEncodingDialog.vue
client/src/components/Watch/: Header.vue  Player.vue  Watch.vue
client/src/components/Watch/Panel/: RecordedProgram.vue
client/src/offline/: OfflinePlaybackController.ts  PlaybackStateManager.ts  manager.ts  storage.ts  types.ts
client/src/router/: index.ts
client/src/service-worker/: sw.ts
client/src/services/: Captures.ts  LiveStreams.ts  Reservations.ts  Settings.ts  TSReplace.ts  Timetable.ts  Videos.ts
client/src/services/player/: CustomBufferController.ts  PlayerController.ts
client/src/services/player/managers/: CaptureManager.ts  KeyboardShortcutManager.ts  LiveEventManager.ts  MediaSessionManager.ts  RecordingManager.ts
client/src/services/player/offline/: HlsOfflineLoader.ts
client/src/stores/: OffilineStore.ts  OfflineStore.ts  PlayerStore.ts  SettingsStore.ts  TSReplaceEncodingStore.ts  TimetableStore.ts
client/src/utils/: Dayjs.ts  PlayerUtils.ts
client/src/views/: Timetable.vue
client/src/views/Captures/: All.vue  Home.vue
client/src/views/Offline/: Index.vue  Watch.vue
client/src/views/Reservations/: Home.vue  Reservations.vue
client/src/views/Settings/: Base.vue  General.vue  Index.vue  Server.vue  TSReplaceEncoding.vue
client/src/views/Timetable/: Search.vue
client/src/views/Videos/: Home.vue  Programs.vue
client/src/workers/: CaptureCompositor.ts  CaptureCompositorProxy.ts
installer/: Installer.py  KonomiTV-Installer.py  Uninstaller.py  Updater.py  Utils.py  pyproject.toml
installer/KonomiTV_Installer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/: debug_clear_tracker.py  discord_main.py  pyproject.toml
server/KonomiTV.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/app/: app.py  config.py  constants.py  schemas.py
server/app/metadata/: CMSectionsDetector.py  KeyFrameAnalyzer.py  MetadataAnalyzer.py  RecordedScanTask.py  TSInfoAnalyzer.py  ThumbnailGenerator.py
server/app/migrations/models/: 8_20251101000000_update.py
server/app/models/: Channel.py  Program.py  RecordedVideo.py
server/app/routers/: CapturesRouter.py  LiveStreamsRouter.py  ReservationsRouter.py  SettingsRouter.py  TSReplaceRouter.py  TimetableRouter.py  VideosRouter.py
server/app/streams/: LiveEncodingTask.py  LiveStream.py  TSReplaceEncodingTask.py  VideoEncodingTask.py
server/app/utils/: EncodingFileTracker.py  TSReplaceEncodingUtil.py
server/logs/tsreplace_encoding/: audit.jsonl  encoding.jsonl  error.jsonl
server/misc/: LiveBitrateCalculator.py  ResetAerichMigration.py  TwitterAPIQueryGenerator.py  UpdateThirdparty.py
