[project]
name = "KonomiTV-Installer"
version = "0.12.0"
description = "KonomiTV Installer"
dependencies = [
    "aiofiles==24.1.0",
    "distro==1.8.0",
    "elevate==0.1.3",
    "emoji==2.14.0",
    "ifaddr==0.2.0",
    "psutil==5.9.8",
    "py7zr==0.22.0",
    "pyinstaller @ https://github.com/tsukumijima/Pyinstaller-Builds/raw/gh-pages/x86_64/pyinstaller-5.13.0-py3-none-any.whl ; sys_platform == 'win32'",
    "pyinstaller==5.13.0 ; sys_platform == 'linux'",
    "requests==2.32.4",
    "rich==13.9.3",
    "ruamel.yaml==0.18.6",
    "taskipy==1.14.0",
    "tzdata==2024.2",
    "watchdog==5.0.3",
]

[tool.setuptools]
py-modules = ["KonomiTV-Installer"]
